// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should rehydrate ssr data 1`] = `
<div>
  baz
</div>
`;

exports[`should render a nested component 1`] = `
<div>
  2-foobar
  <button
    onClick={[Function]}
  />
</div>
`;

exports[`should render a nested component 2`] = `
Object {
  "container1": Object {
    "meta": Object {
      "args": Array [
        2,
        "foo",
      ],
      "ssr": false,
    },
    "state": Object {
      "fulfilled": true,
      "pending": false,
      "reason": null,
      "refreshing": false,
      "rejected": false,
      "value": "2-foo",
    },
  },
  "syncContainer": Object {
    "meta": undefined,
    "state": Object {
      "counter": 2,
    },
  },
}
`;

exports[`should render a nested component 3`] = `
<div>
  2-foobar
  <button
    onClick={[Function]}
  />
</div>
`;

exports[`should render a nested component 4`] = `
Object {
  "container1": Object {
    "meta": Object {
      "args": Array [
        2,
        "foo",
      ],
      "ssr": false,
    },
    "state": Object {
      "fulfilled": true,
      "pending": false,
      "reason": null,
      "refreshing": true,
      "rejected": false,
      "value": "2-foo",
    },
  },
  "syncContainer": Object {
    "meta": undefined,
    "state": Object {
      "counter": 3,
    },
  },
}
`;

exports[`should render a simple component 1`] = `
<div>
  foo
</div>
`;
